fixes
Fixed screen.width != window.width problem. Fixed reforming problem and contorols too short canvas problem.

--- a/index.css
+++ b/index.css
@@ -11,6 +11,10 @@ html, body {
 
 }
 
+body{
+    min-height: 500px;
+}
+
 #Greeting {
     width: 100%;
     text-align: center;
@@ -25,6 +29,7 @@ html, body {
 
 #container0 {
     height: 100%;
+    min-height: 500px;
     padding: 0;
     margin: 0;
     border: 0;
@@ -35,6 +40,7 @@ html, body {
 
 #controls {
     float: left;
+    min-height: 500px;
     width: 30%;
     height: 100%;
     padding: 0;
